--- a/appsettings.json
+++ b/appsettings.json
@@ -12,7 +12,7 @@
           "Name": "Arcade"
         }
       ],
-      "BlastRetroCore": {
+      "InternalEmulator": {
         "CoreFileName": "MAMUEV.so",
         "AutoLaunch": false, /* for arcade, mame cue files will be used */
         "Files": [
@@ -75,9 +75,8 @@
           "Required": true
         }
       ],
-      "BlastRetroCore": {
+      "InternalEmulator": {
         "CoreFileName": "NEMUEV.so",
-        //"SupportedExtensions": [ ".nes", ".fds", ".fc" ],
         "AutoLaunch": true,
         "Files": [
           {
@@ -135,7 +134,7 @@
           "Name": "Atari 2600"
         }
       ],
-      "BlastRetroCore": {
+      "InternalEmulator": {
         "CoreFileName": "AEMUEV.so",
         "AutoLaunch": false, //because for autolaunch .bin roms will launch Sega Genesis emulator (BlastEm)
         "Files": [
@@ -158,8 +157,8 @@
           ]
         },
         {
-          "DisplayName": "Stella", //TODO: test
-          "CoreFileName": "stella6_libretro.so",
+          "DisplayName": "Stella",
+          "CoreFileName": "stella_libretro.so",
           "Files": [
             {
               "SourceUrl": "https://eversd.com/onewebmedia/EverFixer_data.zip",
@@ -182,7 +181,7 @@
           "Name": "Atari 7800"
         }
       ],
-      "BlastRetroCore": {
+      "InternalEmulator": {
         "CoreFileName": "A7EMUEV.so",
         "AutoLaunch": true,
         "Files": [
@@ -192,7 +191,19 @@
             "TargetPath": "A7EMUEV.so"
           }
         ]
-      }
+      },
+      "RetroArchCores": [
+        {
+          "DisplayName": "ProSystem",
+          "CoreFileName": "prosystem_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "http://eversd.com/cores/prosystem_libretro.so",
+              "TargetPath": "retroarch/cores/prosystem_libretro.so"
+            }
+          ]
+        }
+      ]
     },
     {
       "Id": 5,
@@ -206,7 +217,7 @@
           "Name": "SNES"
         }
       ],
-      "BlastRetroCore": {
+      "InternalEmulator": {
         "CoreFileName": "FEMUEV.so",
         "AutoLaunch": true,
         "Files": [
@@ -216,31 +227,61 @@
             "TargetPath": "FEMUEV.so"
           }
         ]
-      }
-    },
-    {
-      "Id": 6,
-      "Alias": "megadrive",
-      "Name": "Mega Drive",
-      "Group": "Sega",
-      "SupportedExtensions": [ ".smd", ".md" ],
-      "TGDB_PlatformIds": [
+      },
+      "RetroArchCores": [
         {
-          "Id": 36,
-          "Name": "Sega Mega Drive"
+          "DisplayName": "Snes9x",
+          "CoreFileName": "snes9x_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "http://eversd.com/cores/snes9x_libretro.so",
+              "TargetPath": "retroarch/cores/snes9x_libretro.so"
+            }
+          ]
+        },
+        {
+          "DisplayName": "Snes9x 2010",
+          "CoreFileName": "snes9x2010_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "http://eversd.com/cores/snes9x2010_libretro.so",
+              "TargetPath": "retroarch/cores/snes9x2010_libretro.so"
+            }
+          ]
         }
       ]
     },
     {
-      "Id": 61,
+      "Id": 6,
       "Alias": "genesis",
-      "Name": "Genesis",
+      "Name": "Genesis / Mega Drive",
       "Group": "Sega",
-      "SupportedExtensions": [ ".gen", ".bin" ],
+      "SupportedExtensions": [ ".gen", ".bin", ".smd", ".md" ],
       "TGDB_PlatformIds": [
         {
           "Id": 18,
           "Name": "Sega Genesis"
+        },
+        {
+          "Id": 36,
+          "Name": "Sega Mega Drive"
+        }
+      ],
+      "InternalEmulator": { // uses BlastEm
+        "SupportedExtensions": [ ".gen", ".bin", ".smd", ".md" ],
+        "AutoLaunch": true
+      },
+      "RetroArchCores": [
+        {
+          "DisplayName": "Genesis Plus GX",
+          "CoreFileName": "genesis_plus_gx_libretro.so",
+          "SupportedExtensions": [ ".gen", ".bin", ".smd", ".md", ".chd" ],
+          "Files": [
+            {
+              "SourceUrl": "http://eversd.com/cores/genesis_plus_gx_libretro.so",
+              "TargetPath": "retroarch/cores/genesis_plus_gx_libretro.so"
+            }
+          ]
         }
       ]
     },
@@ -256,7 +297,7 @@
           "Name": "Game Boy"
         }
       ],
-      "BlastRetroCore": {
+      "InternalEmulator": {
         "CoreFileName": "MGBAEV.so",
         "AutoLaunch": true,
         "Files": [
@@ -266,7 +307,19 @@
             "TargetPath": "MGBAEV.so"
           }
         ]
-      }
+      },
+      "RetroArchCores": [
+        {
+          "DisplayName": "mGBA",
+          "CoreFileName": "mgba_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "http://eversd.com/cores/mgba_libretro.so",
+              "TargetPath": "retroarch/cores/mgba_libretro.so"
+            }
+          ]
+        }
+      ]
     },
     {
       "Id": 71,
@@ -281,7 +334,7 @@
           "Name": "Game Boy Color"
         }
       ],
-      "BlastRetroCore": {
+      "InternalEmulator": {
         "CoreFileName": "MGBAEV.so",
         "AutoLaunch": true,
         "Files": [
@@ -291,7 +344,19 @@
             "TargetPath": "MGBAEV.so"
           }
         ]
-      }
+      },
+      "RetroArchCores": [
+        {
+          "DisplayName": "mGBA",
+          "CoreFileName": "mgba_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "http://eversd.com/cores/mgba_libretro.so",
+              "TargetPath": "retroarch/cores/mgba_libretro.so"
+            }
+          ]
+        }
+      ]
     },
     {
       "Id": 72,
@@ -299,14 +364,14 @@
       "Name": "Game Boy Advance",
       "Group": "Nintendo",
       "GroupItemSortOrder": 3,
-      "SupportedExtensions": [ ".gba", ".agb" ],
+      "SupportedExtensions": [ ".gba" ],
       "TGDB_PlatformIds": [
         {
           "Id": 5,
           "Name": "Game Boy Advance"
         }
       ],
-      "BlastRetroCore": {
+      "InternalEmulator": {
         "CoreFileName": "MGBAEV.so",
         "AutoLaunch": true,
         "Files": [
@@ -316,7 +381,19 @@
             "TargetPath": "MGBAEV.so"
           }
         ]
-      }
+      },
+      "RetroArchCores": [
+        {
+          "DisplayName": "mGBA",
+          "CoreFileName": "mgba_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "http://eversd.com/cores/mgba_libretro.so",
+              "TargetPath": "retroarch/cores/mgba_libretro.so"
+            }
+          ]
+        }
+      ]
     },
     {
       "Id": 8,
@@ -330,9 +407,9 @@
           "Name": "Sony Playstation"
         }
       ],
-      "BlastRetroCore": {
+      "InternalEmulator": {
         "CoreFileName": "PCSXEV.so",
-        "AutoLaunch": false,
+        "AutoLaunch": false, //because .chd support
         "Files": [
           {
             "SourceUrl": "https://eversd.com/onewebmedia/EverFixer_data.zip",
@@ -340,7 +417,19 @@
             "TargetPath": "PCSXEV.so"
           }
         ]
-      }
+      },
+      "RetroArchCores": [
+        {
+          "DisplayName": "PCSX ReARMed",
+          "CoreFileName": "pcsx_rearmed_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "http://eversd.com/cores/pcsx_rearmed_libretro.so",
+              "TargetPath": "retroarch/cores/pcsx_rearmed_libretro.so"
+            }
+          ]
+        }
+      ]
     },
     {
       "Id": 9,
@@ -354,7 +443,7 @@
           "Name": "Atari Lynx"
         }
       ],
-      "BlastRetroCore": {
+      "InternalEmulator": {
         "CoreFileName": "LYNX.so",
         "AutoLaunch": false,
         "Files": [
@@ -364,7 +453,19 @@
             "TargetPath": "LYNX.so"
           }
         ]
-      }
+      },
+      "RetroArchCores": [
+        {
+          "DisplayName": "Handy",
+          "CoreFileName": "handy_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "http://eversd.com/cores/handy_libretro.so",
+              "TargetPath": "retroarch/cores/handy_libretro.so"
+            }
+          ]
+        }
+      ]
     },
     {
       "Id": 10,
@@ -378,7 +479,7 @@
           "Name": "Sega Master System"
         }
       ],
-      "BlastRetroCore": {
+      "InternalEmulator": {
         "CoreFileName": "SMSEV.so",
         "AutoLaunch": true,
         "Files": [
@@ -388,7 +489,19 @@
             "TargetPath": "SMSEV.so"
           }
         ]
-      }
+      },
+      "RetroArchCores": [
+        {
+          "DisplayName": "Genesis Plus GX",
+          "CoreFileName": "genesis_plus_gx_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "http://eversd.com/cores/genesis_plus_gx_libretro.so",
+              "TargetPath": "retroarch/cores/genesis_plus_gx_libretro.so"
+            }
+          ]
+        }
+      ]
     },
     {
       "Id": 11,
@@ -411,7 +524,7 @@
           "Required": true
         }
       ],
-      "BlastRetroCore": {
+      "InternalEmulator": {
         "CoreFileName": "FREEINTV.so",
         "AutoLaunch": false,
         "Files": [
@@ -421,7 +534,20 @@
             "TargetPath": "FREEINTV.so"
           }
         ]
-      }
+      },
+      "RetroArchCores": [
+        {
+          "DisplayName": "FreeIntv",
+          "CoreFileName": "freeintv_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "https://eversd.com/onewebmedia/EverFixer_data.zip",
+              "SourcePath": "FREEINTV.so",
+              "TargetPath": "retroarch/cores/freeintv_libretro.so"
+            }
+          ]
+        }
+      ]
     },
     {
       "Id": 12,
@@ -435,7 +561,7 @@
           "Name": "Sega Game Gear"
         }
       ],
-      "BlastRetroCore": {
+      "InternalEmulator": {
         "CoreFileName": "SGG.so",
         "AutoLaunch": false,
         "Files": [
@@ -445,21 +571,34 @@
             "TargetPath": "SGG.so"
           }
         ]
-      }
+      },
+      "RetroArchCores": [
+        {
+          "DisplayName": "Genesis Plus GX",
+          "CoreFileName": "genesis_plus_gx_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "http://eversd.com/cores/genesis_plus_gx_libretro.so",
+              "TargetPath": "retroarch/cores/genesis_plus_gx_libretro.so"
+            }
+          ]
+        }
+      ]
     },
     {
       "Id": 13,
       "Alias": "pcengine",
       "Name": "PC Engine",
-      "SupportedExtensions": [ ".pce" ],
+      "SupportedExtensions": [ ".pce", ".iso", ".chd" ],
       "TGDB_PlatformIds": [
         {
           "Id": 34,
           "Name": "TurboGrafx 16"
         }
       ],
-      "BlastRetroCore": {
+      "InternalEmulator": {
         "CoreFileName": "PCENG.so",
+        "SupportedExtensions": [ ".pce"],
         "AutoLaunch": false,
         "Files": [
           {
@@ -468,7 +607,20 @@
             "TargetPath": "PCENG.so"
           }
         ]
-      }
+      },
+      "RetroArchCores": [
+        {
+          "DisplayName": "Beetle PCE FAST",
+          "CoreFileName": "mednafen_pce_fast_libretro.so",
+          "SupportedExtensions": [ ".pce", ".iso", ".chd" ],
+          "Files": [
+            {
+              "SourceUrl": "http://eversd.com/cores/mednafen_pce_fast_libretro.so",
+              "TargetPath": "retroarch/cores/mednafen_pce_fast_libretro.so"
+            }
+          ]
+        }
+      ]
     },
     {
       "Id": 14,
@@ -482,7 +634,7 @@
           "Name": "WonderSwan"
         }
       ],
-      "BlastRetroCore": {
+      "InternalEmulator": {
         "CoreFileName": "WSWAN.so",
         "AutoLaunch": false,
         "Files": [
@@ -492,7 +644,19 @@
             "TargetPath": "WSWAN.so"
           }
         ]
-      }
+      },
+      "RetroArchCores": [
+        {
+          "DisplayName": "Beetle Cygne",
+          "CoreFileName": "mednafen_wswan_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "http://eversd.com/cores/mednafen_wswan_libretro.so",
+              "TargetPath": "retroarch/cores/mednafen_wswan_libretro.so"
+            }
+          ]
+        }
+      ]
     },
     {
       "Id": 15,
@@ -506,7 +670,7 @@
           "Name": "WonderSwan Color"
         }
       ],
-      "BlastRetroCore": {
+      "InternalEmulator": {
         "CoreFileName": "WSWAN.so",
         "AutoLaunch": false,
         "Files": [
@@ -516,7 +680,19 @@
             "TargetPath": "WSWAN.so"
           }
         ]
-      }
+      },
+      "RetroArchCores": [
+        {
+          "DisplayName": "Beetle Cygne",
+          "CoreFileName": "mednafen_wswan_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "http://eversd.com/cores/mednafen_wswan_libretro.so",
+              "TargetPath": "retroarch/cores/mednafen_wswan_libretro.so"
+            }
+          ]
+        }
+      ]
     },
     {
       "Id": 16,
@@ -529,7 +705,7 @@
           "Name": "Watara Supervision"
         }
       ],
-      "BlastRetroCore": {
+      "InternalEmulator": {
         "CoreFileName": "POTATOR.so",
         "AutoLaunch": false,
         "Files": [
@@ -556,7 +732,7 @@
       "Id": 17,
       "Alias": "odyssey2",
       "Name": "Odyssey 2",
-      "SupportedExtensions": [".bin" ],
+      "SupportedExtensions": [ ".bin" ],
       "TGDB_PlatformIds": [
         {
           "Id": 4927,
@@ -569,7 +745,7 @@
           "Required": true
         }
       ],
-      "BlastRetroCore": {
+      "InternalEmulator": {
         "CoreFileName": "O2EM.so",
         "AutoLaunch": false,
         "Files": [
@@ -597,7 +773,7 @@
     {
       "Id": 18,
       "Alias": "c64",
-      "Name": "Commodore 64",
+      "Name": "C64",
       "Group": "Commodore",
       "SupportedExtensions": [ ".prg" ],
       "TGDB_PlatformIds": [
@@ -651,7 +827,53 @@
           ]
         }
       ]
+    },
+    {
+      "Id": 20,
+      "Alias": "doom",
+      "Name": "Doom",
+      "SupportedExtensions": [ ".wad" ],
+      "RetroArchCores": [
+        {
+          "DisplayName": "PrBoom",
+          "CoreFileName": "prboom_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "http://eversd.com/cores/prboom_libretro.so",
+              "TargetPath": "retroarch/cores/prboom_libretro.so"
+            },
+            {
+              "SourceUrl": "https://github.com/libretro/libretro-prboom/raw/master/prboom.wad",
+              "TargetPath": "retroarch/system/prboom.wad"
+            }
+          ]
+        }
+      ]
     }
+    //  // DeSmuME works, but veeeerrrryyyy sssllloooowwww
+    //{
+    //  "Id": ??,
+    //  "Alias": "nds",
+    //  "Name": "DS",
+    //  "Group": "Nintendo",
+    //  "SupportedExtensions": [ ".nds" ],
+    //  "TGDB_PlatformIds": [
+    //    {
+    //      "Id": 8,
+    //      "Name": "Nintendo DS"
+    //    }
+    //  ],
+    //  "InternalEmulator": { 
+    //    "CoreFileName": "DESMUME.so",
+    //    "AutoLaunch": false,
+    //    "Files": [
+    //      {
+    //        "SourceUrl": "http://eversd.com/cores/desmume2015_libretro.so",
+    //        "TargetPath": "DESMUME.so"
+    //      }
+    //    ]
+    //  }
+    //}
   ],
   "Genres": [
     {
