--- a/appsettings.json
+++ b/appsettings.json
@@ -88,7 +88,7 @@
       },
       "RetroArchCores": [
         {
-          "DisplayName": "FCEUMM",
+          "DisplayName": "FCEUmm",
           "CoreFileName": "fceumm_libretro.so",
           "SupportedExtensions": [ ".nes", ".fds" ],
           "Files": [
@@ -268,6 +268,7 @@
         }
       ],
       "InternalEmulator": { // uses BlastEm
+        "Group": "Sega",
         "SupportedExtensions": [ ".gen", ".bin", ".smd", ".md" ],
         "AutoLaunch": true
       },
@@ -275,11 +276,92 @@
         {
           "DisplayName": "Genesis Plus GX",
           "CoreFileName": "genesis_plus_gx_libretro.so",
-          "SupportedExtensions": [ ".gen", ".bin", ".smd", ".md", ".chd" ],
+          "SupportedExtensions": [ ".gen", ".bin", ".smd", ".md" ],
           "Files": [
             {
               "SourceUrl": "http://eversd.com/cores/genesis_plus_gx_libretro.so",
               "TargetPath": "retroarch/cores/genesis_plus_gx_libretro.so"
+            }
+          ]
+        }
+      ]
+    },
+    {
+      "Id": 61,
+      "Alias": "megacd",
+      "Name": "Mega CD",
+      "Group": "Sega",
+      "SupportedExtensions": [ ".chd" ],
+      "TGDB_PlatformIds": [
+        {
+          "Id": 21,
+          "Name": "Sega CD"
+        }
+      ],
+      "BiosFiles": [
+        {
+          "FileName": "bios_CD_E.bin",
+          "Required": true
+        },
+        {
+          "FileName": "bios_CD_J.bin",
+          "Required": true
+        },
+        {
+          "FileName": "bios_CD_U.bin",
+          "Required": true
+        }
+      ],
+      "RetroArchCores": [
+        {
+          "DisplayName": "Genesis Plus GX",
+          "CoreFileName": "genesis_plus_gx_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "http://eversd.com/cores/genesis_plus_gx_libretro.so",
+              "TargetPath": "retroarch/cores/genesis_plus_gx_libretro.so"
+            }
+          ]
+        }
+      ]
+    },
+    {
+      "Id": 62,
+      "Alias": "sega32x",
+      "Name": "32X",
+      "Group": "Sega",
+      "SupportedExtensions": [ ".32x", ".chd" ], //.chd to support the 5 "Sega CD 32X" games
+      "TGDB_PlatformIds": [
+        {
+          "Id": 33,
+          "Name": "Sega 32X"
+        }
+      ],
+      "BiosFiles": [
+        {
+          "FileName": "bios_CD_E.bin",
+          "SupportedExtensions": [ ".chd" ],
+          "Required": true
+        },
+        {
+          "FileName": "bios_CD_J.bin",
+          "SupportedExtensions": [ ".chd" ],
+          "Required": true
+        },
+        {
+          "FileName": "bios_CD_U.bin",
+          "SupportedExtensions": [ ".chd" ],
+          "Required": true
+        }
+      ],
+      "RetroArchCores": [
+        {
+          "DisplayName": "PicoDrive",
+          "CoreFileName": "picodrive_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "http://eversd.com/cores/picodrive_libretro.so",
+              "TargetPath": "retroarch/cores/picodrive_libretro.so"
             }
           ]
         }
@@ -589,16 +671,20 @@
       "Id": 13,
       "Alias": "pcengine",
       "Name": "PC Engine",
-      "SupportedExtensions": [ ".pce", ".iso", ".chd" ],
+      "SupportedExtensions": [ ".pce", ".chd" ],
       "TGDB_PlatformIds": [
         {
           "Id": 34,
           "Name": "TurboGrafx 16"
+        },
+        {
+          "Id": 4955,
+          "Name": "TurboGrafx CD"
         }
       ],
       "InternalEmulator": {
         "CoreFileName": "PCENG.so",
-        "SupportedExtensions": [ ".pce"],
+        "SupportedExtensions": [ ".pce" ], //maybe this also plays .chd, but didn't test
         "AutoLaunch": false,
         "Files": [
           {
@@ -610,9 +696,9 @@
       },
       "RetroArchCores": [
         {
-          "DisplayName": "Beetle PCE FAST",
+          "DisplayName": "Mednafen PCE FAST",
           "CoreFileName": "mednafen_pce_fast_libretro.so",
-          "SupportedExtensions": [ ".pce", ".iso", ".chd" ],
+          "SupportedExtensions": [ ".pce", ".chd" ],
           "Files": [
             {
               "SourceUrl": "http://eversd.com/cores/mednafen_pce_fast_libretro.so",
@@ -625,46 +711,13 @@
     {
       "Id": 14,
       "Alias": "wonderswan",
-      "Name": "WonderSwan",
-      "Group": "Bandai",
-      "SupportedExtensions": [ ".ws" ],
+      "Name": "WonderSwan / Color",
+      "SupportedExtensions": [ ".ws", ".wsc" ],
       "TGDB_PlatformIds": [
         {
           "Id": 4925,
           "Name": "WonderSwan"
-        }
-      ],
-      "InternalEmulator": {
-        "CoreFileName": "WSWAN.so",
-        "AutoLaunch": false,
-        "Files": [
-          {
-            "SourceUrl": "https://eversd.com/onewebmedia/EverFixer_data.zip",
-            "SourcePath": "emulator/11.so",
-            "TargetPath": "WSWAN.so"
-          }
-        ]
-      },
-      "RetroArchCores": [
-        {
-          "DisplayName": "Beetle Cygne",
-          "CoreFileName": "mednafen_wswan_libretro.so",
-          "Files": [
-            {
-              "SourceUrl": "http://eversd.com/cores/mednafen_wswan_libretro.so",
-              "TargetPath": "retroarch/cores/mednafen_wswan_libretro.so"
-            }
-          ]
-        }
-      ]
-    },
-    {
-      "Id": 15,
-      "Alias": "wonderswancolor",
-      "Name": "WonderSwan Color",
-      "Group": "Bandai",
-      "SupportedExtensions": [ ".wsc" ],
-      "TGDB_PlatformIds": [
+        },
         {
           "Id": 4926,
           "Name": "WonderSwan Color"
@@ -683,12 +736,40 @@
       },
       "RetroArchCores": [
         {
-          "DisplayName": "Beetle Cygne",
+          "DisplayName": "Mednafen WonderSwan",
           "CoreFileName": "mednafen_wswan_libretro.so",
           "Files": [
             {
               "SourceUrl": "http://eversd.com/cores/mednafen_wswan_libretro.so",
               "TargetPath": "retroarch/cores/mednafen_wswan_libretro.so"
+            }
+          ]
+        }
+      ]
+    },
+    {
+      "Id": 15,
+      "Alias": "neogeo",
+      "Name": "Neo Geo Pocket / Color",
+      "SupportedExtensions": [ ".ngp", ".ngc" ],
+      "TGDB_PlatformIds": [
+        {
+          "Id": 4922,
+          "Name": "Neo Geo Pocket"
+        },
+        {
+          "Id": 4923,
+          "Name": "Neo Geo Pocket Color"
+        }
+      ],
+      "RetroArchCores": [
+        {
+          "DisplayName": "Mednafen NGP",
+          "CoreFileName": "mednafen_ngp_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "http://eversd.com/cores/mednafen_ngp_libretro.so",
+              "TargetPath": "retroarch/cores/mednafen_ngp_libretro.so"
             }
           ]
         }
@@ -850,30 +931,6 @@
         }
       ]
     }
-    //  // DeSmuME works, but veeeerrrryyyy sssllloooowwww
-    //{
-    //  "Id": ??,
-    //  "Alias": "nds",
-    //  "Name": "DS",
-    //  "Group": "Nintendo",
-    //  "SupportedExtensions": [ ".nds" ],
-    //  "TGDB_PlatformIds": [
-    //    {
-    //      "Id": 8,
-    //      "Name": "Nintendo DS"
-    //    }
-    //  ],
-    //  "InternalEmulator": { 
-    //    "CoreFileName": "DESMUME.so",
-    //    "AutoLaunch": false,
-    //    "Files": [
-    //      {
-    //        "SourceUrl": "http://eversd.com/cores/desmume2015_libretro.so",
-    //        "TargetPath": "DESMUME.so"
-    //      }
-    //    ]
-    //  }
-    //}
   ],
   "Genres": [
     {
