minor config changes

--- a/appsettings.json
+++ b/appsettings.json
@@ -269,14 +269,12 @@
       ],
       "InternalEmulator": { // uses BlastEm
         "Group": "Sega",
-        "SupportedExtensions": [ ".gen", ".bin", ".smd", ".md" ],
         "AutoLaunch": true
       },
       "RetroArchCores": [
         {
           "DisplayName": "Genesis Plus GX",
           "CoreFileName": "genesis_plus_gx_libretro.so",
-          "SupportedExtensions": [ ".gen", ".bin", ".smd", ".md" ],
           "Files": [
             {
               "SourceUrl": "http://eversd.com/cores/genesis_plus_gx_libretro.so",
@@ -882,7 +880,7 @@
       "Alias": "amiga",
       "Name": "Amiga",
       "Group": "Commodore",
-      "SupportedExtensions": [ ".adf", ".adz" ],
+      "SupportedExtensions": [ ".adf" ], //TODO: test if .adz also works
       "TGDB_PlatformIds": [
         {
           "Id": 4911,
