Added support for Amiga CD32 and .cue files

--- a/appsettings.json
+++ b/appsettings.json
@@ -480,7 +480,7 @@
       "Alias": "psx",
       "Name": "Playstation 1",
       "Group": "Sony",
-      "SupportedExtensions": [ ".ccd", ".img", ".sub", ".pbp", ".iso", ".chd" ],
+      "SupportedExtensions": [ ".cue", ".chd" ],
       "TGDB_PlatformIds": [
         {
           "Id": 10,
@@ -891,6 +891,42 @@
         {
           "FileName": "kick34005.A500",
           "Required": false
+        }
+      ],
+      "RetroArchCores": [
+        {
+          "DisplayName": "PUAE",
+          "CoreFileName": "puae_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "https://buildbot.libretro.com/nightly/linux/armv7-neon-hf/latest/puae_libretro.so.zip",
+              "SourcePath": "puae_libretro.so",
+              "TargetPath": "retroarch/cores/puae_libretro.so"
+            }
+          ]
+        }
+      ]
+    },
+    {
+      "Id": 191,
+      "Alias": "amigacd32",
+      "Name": "Amiga CD32",
+      "Group": "Commodore",
+      "SupportedExtensions": [ ".cue" ],
+      "TGDB_PlatformIds": [
+        {
+          "Id": 4947,
+          "Name": "Amiga CD32"
+        }
+      ],
+      "BiosFiles": [
+        {
+          "FileName": "kick40060.CD32",
+          "Required": true
+        },
+        {
+          "FileName": "kick40060.CD32.ext",
+          "Required": true
         }
       ],
       "RetroArchCores": [
