now shows warning for syncing game with missing BIOS file(s) + optimization for importing .cue files + support .cue files for more CD console platforms

--- a/appsettings.json
+++ b/appsettings.json
@@ -61,11 +61,15 @@
       "Alias": "nes",
       "Name": "NES",
       "Group": "Nintendo",
-      "SupportedExtensions": [ ".nes", ".fds", ".fc" ],
+      "SupportedExtensions": [ ".nes", ".fds", ".fc" ], //should we handle fds as seperate platform?
       "TGDB_PlatformIds": [
         {
           "Id": 7,
           "Name": "NES"
+        },
+        {
+          "Id": 4936,
+          "Name": "Famicom Disk System"
         }
       ],
       "BiosFiles": [
@@ -289,7 +293,7 @@
       "Alias": "megacd",
       "Name": "Mega CD",
       "Group": "Sega",
-      "SupportedExtensions": [ ".chd" ],
+      "SupportedExtensions": [ ".chd", ".cue" ],
       "TGDB_PlatformIds": [
         {
           "Id": 21,
@@ -328,28 +332,11 @@
       "Alias": "sega32x",
       "Name": "32X",
       "Group": "Sega",
-      "SupportedExtensions": [ ".32x", ".chd" ], //.chd to support the 5 "Sega CD 32X" games
+      "SupportedExtensions": [ ".32x" ],
       "TGDB_PlatformIds": [
         {
           "Id": 33,
           "Name": "Sega 32X"
-        }
-      ],
-      "BiosFiles": [
-        {
-          "FileName": "bios_CD_E.bin",
-          "SupportedExtensions": [ ".chd" ],
-          "Required": true
-        },
-        {
-          "FileName": "bios_CD_J.bin",
-          "SupportedExtensions": [ ".chd" ],
-          "Required": true
-        },
-        {
-          "FileName": "bios_CD_U.bin",
-          "SupportedExtensions": [ ".chd" ],
-          "Required": true
         }
       ],
       "RetroArchCores": [
@@ -669,7 +656,7 @@
       "Id": 13,
       "Alias": "pcengine",
       "Name": "PC Engine",
-      "SupportedExtensions": [ ".pce", ".chd" ],
+      "SupportedExtensions": [ ".pce", ".cue", ".chd" ],
       "TGDB_PlatformIds": [
         {
           "Id": 34,
@@ -682,7 +669,7 @@
       ],
       "InternalEmulator": {
         "CoreFileName": "PCENG.so",
-        "SupportedExtensions": [ ".pce" ], //maybe this also plays .chd, but didn't test
+        "SupportedExtensions": [ ".pce" ], //maybe internal emulator also plays .cue and .chd, but I didn't test
         "AutoLaunch": false,
         "Files": [
           {
@@ -696,7 +683,7 @@
         {
           "DisplayName": "Mednafen PCE FAST",
           "CoreFileName": "mednafen_pce_fast_libretro.so",
-          "SupportedExtensions": [ ".pce", ".chd" ],
+          "SupportedExtensions": [ ".pce", ".cue", ".chd" ],
           "Files": [
             {
               "SourceUrl": "http://eversd.com/cores/mednafen_pce_fast_libretro.so",
