--- a/appsettings.json
+++ b/appsettings.json
@@ -10,6 +10,16 @@
         {
           "Id": 23,
           "Name": "Arcade"
+        },
+        {
+          "Id": 24,
+          "Name": "Neo Geo"
+        }
+      ],
+      "BiosFiles": [
+        {
+          "FileName": "neogeo.zip", //only required for Neo Geo cart games
+          "Required": false
         }
       ],
       "InternalEmulator": {
@@ -75,6 +85,7 @@
       "BiosFiles": [
         {
           "FileName": "disksys.rom",
+          "MD5": "ca30b50f880eb660a320674ed365ef7a",
           "SupportedExtensions": [ ".fds" ],
           "Required": true
         }
@@ -272,7 +283,6 @@
         }
       ],
       "InternalEmulator": { // uses BlastEm
-        "Group": "Sega",
         "AutoLaunch": true
       },
       "RetroArchCores": [
@@ -293,7 +303,7 @@
       "Alias": "megacd",
       "Name": "Mega CD",
       "Group": "Sega",
-      "SupportedExtensions": [ ".chd", ".cue" ],
+      "SupportedExtensions": [ ".chd", ".cue", ".m3u" ],
       "TGDB_PlatformIds": [
         {
           "Id": 21,
@@ -377,6 +387,16 @@
       },
       "RetroArchCores": [
         {
+          "DisplayName": "Gambatte",
+          "CoreFileName": "gambatte_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "http://eversd.com/cores/gambatte_libretro.so",
+              "TargetPath": "retroarch/cores/gambatte_libretro.so"
+            }
+          ]
+        },
+        {
           "DisplayName": "mGBA",
           "CoreFileName": "mgba_libretro.so",
           "Files": [
@@ -413,6 +433,16 @@
         ]
       },
       "RetroArchCores": [
+        {
+          "DisplayName": "Gambatte",
+          "CoreFileName": "gambatte_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "http://eversd.com/cores/gambatte_libretro.so",
+              "TargetPath": "retroarch/cores/gambatte_libretro.so"
+            }
+          ]
+        },
         {
           "DisplayName": "mGBA",
           "CoreFileName": "mgba_libretro.so",
@@ -467,7 +497,7 @@
       "Alias": "psx",
       "Name": "Playstation 1",
       "Group": "Sony",
-      "SupportedExtensions": [ ".cue", ".chd" ],
+      "SupportedExtensions": [ ".ccd", ".img", ".sub", ".pbp", ".iso", ".cue", ".chd", ".m3u" ],
       "TGDB_PlatformIds": [
         {
           "Id": 10,
@@ -476,6 +506,7 @@
       ],
       "InternalEmulator": {
         "CoreFileName": "PCSXEV.so",
+        "SupportedExtensions": [ ".ccd", ".img", ".sub", ".pbp", ".iso", ".chd" ],
         "AutoLaunch": false, //because .chd support
         "Files": [
           {
@@ -489,6 +520,7 @@
         {
           "DisplayName": "PCSX ReARMed",
           "CoreFileName": "pcsx_rearmed_libretro.so",
+          "SupportedExtensions": [ ".ccd", ".img", ".sub", ".pbp", ".iso", ".cue", ".chd", ".m3u" ],
           "Files": [
             {
               "SourceUrl": "http://eversd.com/cores/pcsx_rearmed_libretro.so",
@@ -584,10 +616,12 @@
       "BiosFiles": [
         {
           "FileName": "exec.bin",
+          "MD5": "62e761035cb657903761800f4437b8af",
           "Required": true
         },
         {
           "FileName": "grom.bin",
+          "MD5": "0cd5946c6473e42e8e4c2137785e427f",
           "Required": true
         }
       ],
@@ -808,7 +842,14 @@
       "BiosFiles": [
         {
           "FileName": "o2rom.bin",
+          "MD5": "562d5ebf9e030a40d6fabfc2f33139fd",
           "Required": true
+        },
+        {
+          //only required for Videopac+
+          "FileName": "g7400.bin",
+          "MD5": "c500ff71236068e0dc0d0603d265ae76",
+          "Required": false
         }
       ],
       "InternalEmulator": {
@@ -877,6 +918,7 @@
       "BiosFiles": [
         {
           "FileName": "kick34005.A500",
+          "MD5": "82a21c1890cae844b3df741f2762d48d",
           "Required": false
         }
       ],
@@ -896,7 +938,7 @@
     },
     {
       "Id": 191,
-      "Alias": "amigacd32",
+      "Alias": "amiga-cd32",
       "Name": "Amiga CD32",
       "Group": "Commodore",
       "SupportedExtensions": [ ".cue" ],
@@ -909,10 +951,12 @@
       "BiosFiles": [
         {
           "FileName": "kick40060.CD32",
+          "MD5": "5f8924d013dd57a89cf349f4cdedc6b1",
           "Required": true
         },
         {
           "FileName": "kick40060.CD32.ext",
+          "MD5": "bb72565701b1b6faece07d68ea5da639",
           "Required": true
         }
       ],
