--- a/appsettings.json
+++ b/appsettings.json
@@ -19,6 +19,7 @@
       "BiosFiles": [
         {
           "FileName": "neogeo.zip", //only required for Neo Geo cart games
+          "MD5": [ "dffb72f116d36d025068b23970a4f6df", "67682655fa5fb32831e28429643e26c7", "93adcaa22d652417cbc3927d46b11806" ],
           "Required": false
         }
       ],
@@ -85,7 +86,7 @@
       "BiosFiles": [
         {
           "FileName": "disksys.rom",
-          "MD5": "ca30b50f880eb660a320674ed365ef7a",
+          "MD5": [ "ca30b50f880eb660a320674ed365ef7a" ],
           "SupportedExtensions": [ ".fds" ],
           "Required": true
         }
@@ -506,8 +507,8 @@
       ],
       "InternalEmulator": {
         "CoreFileName": "PCSXEV.so",
-        "SupportedExtensions": [ ".ccd", ".img", ".sub", ".pbp", ".iso", ".chd" ],
-        "AutoLaunch": false, //because .chd support
+        "SupportedExtensions": [ ".ccd", ".img", ".sub", ".pbp", ".iso", ".cue", ".chd" ],
+        "AutoLaunch": false, //because of .cue and .chd support
         "Files": [
           {
             "SourceUrl": "https://eversd.com/onewebmedia/EverFixer_data.zip",
@@ -616,12 +617,12 @@
       "BiosFiles": [
         {
           "FileName": "exec.bin",
-          "MD5": "62e761035cb657903761800f4437b8af",
+          "MD5": [ "62e761035cb657903761800f4437b8af" ],
           "Required": true
         },
         {
           "FileName": "grom.bin",
-          "MD5": "0cd5946c6473e42e8e4c2137785e427f",
+          "MD5": [ "0cd5946c6473e42e8e4c2137785e427f" ],
           "Required": true
         }
       ],
@@ -842,13 +843,13 @@
       "BiosFiles": [
         {
           "FileName": "o2rom.bin",
-          "MD5": "562d5ebf9e030a40d6fabfc2f33139fd",
+          "MD5": [ "562d5ebf9e030a40d6fabfc2f33139fd" ],
           "Required": true
         },
         {
           //only required for Videopac+
           "FileName": "g7400.bin",
-          "MD5": "c500ff71236068e0dc0d0603d265ae76",
+          "MD5": [ "c500ff71236068e0dc0d0603d265ae76" ],
           "Required": false
         }
       ],
@@ -900,6 +901,9 @@
               "TargetPath": "retroarch/cores/vice_x64_libretro.so"
             }
           ]
+          // note: "retroarch/config/VICE x64/VICE x64.opt" needs following setting for smooth emulation
+          //   vice_resid_sampling = "fast"
+          //   vice_sound_sample_rate = "22050"
         }
       ]
     },
@@ -918,7 +922,7 @@
       "BiosFiles": [
         {
           "FileName": "kick34005.A500",
-          "MD5": "82a21c1890cae844b3df741f2762d48d",
+          "MD5": [ "82a21c1890cae844b3df741f2762d48d" ],
           "Required": false
         }
       ],
@@ -951,12 +955,12 @@
       "BiosFiles": [
         {
           "FileName": "kick40060.CD32",
-          "MD5": "5f8924d013dd57a89cf349f4cdedc6b1",
+          "MD5": [ "5f8924d013dd57a89cf349f4cdedc6b1" ],
           "Required": true
         },
         {
           "FileName": "kick40060.CD32.ext",
-          "MD5": "bb72565701b1b6faece07d68ea5da639",
+          "MD5": [ "bb72565701b1b6faece07d68ea5da639" ],
           "Required": true
         }
       ],
