- added support for external Lynx bios - added support for .iso Amiga CD32 games - fix for Genesis games mapping

--- a/appsettings.json
+++ b/appsettings.json
@@ -543,13 +543,19 @@
           "Name": "Atari Lynx"
         }
       ],
+      "BiosFiles": [
+        {
+          "FileName": "lynxboot.img",
+          "MD5": [ "fcd403db69f54290b51035d82f835e7b" ],
+          "Required": false
+        }
+      ],
       "InternalEmulator": {
         "CoreFileName": "LYNX.so",
         "AutoLaunch": false,
         "Files": [
           {
-            "SourceUrl": "https://eversd.com/onewebmedia/EverFixer_data.zip",
-            "SourcePath": "emulator/9.so",
+            "SourceUrl": "http://eversd.com/cores/handy_libretro.so",
             "TargetPath": "LYNX.so"
           }
         ]
@@ -945,7 +951,7 @@
       "Alias": "amiga-cd32",
       "Name": "Amiga CD32",
       "Group": "Commodore",
-      "SupportedExtensions": [ ".cue" ],
+      "SupportedExtensions": [ ".iso", ".cue" ],
       "TGDB_PlatformIds": [
         {
           "Id": 4947,
