support for PSP games

--- a/appsettings.json
+++ b/appsettings.json
@@ -532,6 +532,31 @@
       ]
     },
     {
+      "Id": 81,
+      "Alias": "psp",
+      "Name": "Playstation Portable (PSP)",
+      "Group": "Sony",
+      "SupportedExtensions": [ ".iso", ".cso" ],
+      "TGDB_PlatformIds": [
+        {
+          "Id": 13,
+          "Name": "Sony Playstation Portable"
+        }
+      ],
+      "RetroArchCores": [
+        {
+          "DisplayName": "PPSSPP",
+          "CoreFileName": "ppsspp_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "http://eversd.com/cores/ppsspp_libretro.so",
+              "TargetPath": "retroarch/cores/ppsspp_libretro.so"
+            }
+          ]
+        }
+      ]
+    },
+    {
       "Id": 9,
       "Alias": "atarilynx",
       "Name": "Lynx",
