when uploaded BIOS has MD5-mismatch, a messagebox is shown and clicking 'OK' will copy the required MD5 hash into clipboard

--- a/appsettings.json
+++ b/appsettings.json
@@ -1032,6 +1032,18 @@
       ]
     }
   ],
+  "PlatformRemappings": [
+    {
+      "OldPlatformId": 61,
+      "OldPlatformName": "Genesis",
+      "NewPlatformId": 6
+    },
+    {
+      "OldPlatformId": 15,
+      "OldPlatformName": "WonderSwan Color",
+      "NewPlatformId": 14
+    }
+  ],
   "Genres": [
     {
       "Name": "Action",
