Added support for C64 .d64 files + Vectrex emulation Optimized the local file caching

--- a/appsettings.json
+++ b/appsettings.json
@@ -914,7 +914,7 @@
       "Alias": "c64",
       "Name": "C64",
       "Group": "Commodore",
-      "SupportedExtensions": [ ".prg" ],
+      "SupportedExtensions": [ ".prg",".d64" ],
       "TGDB_PlatformIds": [
         {
           "Id": 40,
@@ -927,14 +927,10 @@
           "CoreFileName": "vice_x64_libretro.so",
           "Files": [
             {
-              "SourceUrl": "https://buildbot.libretro.com/nightly/linux/armv7-neon-hf/latest/vice_x64_libretro.so.zip",
-              "SourcePath": "vice_x64_libretro.so",
+              "SourceUrl": "http://eversd.com/cores/vice_x64_libretro.so",
               "TargetPath": "retroarch/cores/vice_x64_libretro.so"
             }
           ]
-          // note: "retroarch/config/VICE x64/VICE x64.opt" needs following setting for smooth emulation
-          //   vice_resid_sampling = "fast"
-          //   vice_sound_sample_rate = "22050"
         }
       ]
     },
@@ -1026,6 +1022,42 @@
             {
               "SourceUrl": "https://github.com/libretro/libretro-prboom/raw/master/prboom.wad",
               "TargetPath": "retroarch/system/prboom.wad"
+            }
+          ]
+        }
+      ]
+    },
+    {
+      "Id": 21,
+      "Alias": "vectrex",
+      "Name": "Vectrex",
+      "SupportedExtensions": [ ".vec" ],
+      "TGDB_PlatformIds": [
+        {
+          "Id": 4939,
+          "Name": "Vectrex"
+        }
+      ],
+      "InternalEmulator": {
+        "CoreFileName": "VECX.so",
+        "AutoLaunch": false,
+        "Files": [
+          {
+            "SourceUrl": "https://buildbot.libretro.com/nightly/linux/armv7-neon-hf/latest/vecx_libretro.so.zip",
+            "SourcePath": "vecx_libretro.so",
+            "TargetPath": "VECX.so"
+          }
+        ]
+      },
+      "RetroArchCores": [
+        {
+          "DisplayName": "vecx",
+          "CoreFileName": "vecx_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "https://buildbot.libretro.com/nightly/linux/armv7-neon-hf/latest/vecx_libretro.so.zip",
+              "SourcePath": "vecx_libretro.so",
+              "TargetPath": "retroarch/cores/vecx_libretro.so"
             }
           ]
         }
