work in progress

--- a/appsettings.json
+++ b/appsettings.json
@@ -222,6 +222,48 @@
       ]
     },
     {
+      "Id": 41,
+      "Alias": "atari5200",
+      "Name": "5200",
+      "Group": "Atari",
+      "SupportedExtensions": [ ".bin", ".a52" ],
+      "TGDB_PlatformIds": [
+        {
+          "Id": 26,
+          "Name": "Atari 5200"
+        }
+      ],
+      "BiosFiles": [
+        {
+          "FileName": "5200.rom",
+          "MD5": [ "281f20ea4320404ec820fb7ec0693b38" ],
+          "Required": true
+        }
+      ],
+      "InternalEmulator": {
+        "CoreFileName": "A800.so",
+        "AutoLaunch": true,
+        "Files": [
+          {
+            "SourceUrl": "http://eversd.com/cores/atari800_libretro.so",
+            "TargetPath": "A800.so"
+          }
+        ]
+      },
+      "RetroArchCores": [
+        {
+          "DisplayName": "Atari800",
+          "CoreFileName": "atari800_libretro.so",
+          "Files": [
+            {
+              "SourceUrl": "http://eversd.com/cores/atari800_libretro.so",
+              "TargetPath": "retroarch/cores/atari800_libretro.so"
+            }
+          ]
+        }
+      ]
+    },
+    {
       "Id": 5,
       "Alias": "snes",
       "Name": "SNES",
@@ -914,7 +956,7 @@
       "Alias": "c64",
       "Name": "C64",
       "Group": "Commodore",
-      "SupportedExtensions": [ ".prg",".d64" ],
+      "SupportedExtensions": [ ".prg", ".d64" ],
       "TGDB_PlatformIds": [
         {
           "Id": 40,
